bonus part is done

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+
+    <!-- Bonus part question and ans add-->
+    <section class="container">
+        <h1>Q: How does javascript works?</h1>
+        <p>Ans: we know, javascript run by the V8 engine. its run code up to down. it is single thread single threaded
+            programming language. <br> it run singal code at a time.multiple code doesnt execute one time.</p>
+        <h1>Q: How event loop works?</h1>
+        <p>Ans: event loop is the process thats waits for the call stack to clear before push callbacks from the task
+            queue to call stack. <br>
+            if the call stack is clean the event loop manuall triggers and check the task queue for available any
+            callbacks</p>
+        <h1>Q: Local storage and session storage diffrence?</h1>
+        <p>Ans: local storage and session storage is similar but the main difference is local storage is stable and
+            session storage is non-stable. <br> when we works browser both are created manually. if we closed browser
+            tab the
+            session storage is missing otherhand local storage is still there. <br><br>
+            we can set value for localStorage in (localStorage.setItem(keyName, keyValue);)
+            and sessionstorage is (sessionStorage.setItem(keyName, keyValue);)</p>
+
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
